Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97480

ParentChange crash

XMLWordPrintable

    • macOS, Windows
    • 785addcd17c7988be90a2ca17599c12b07e4e170 (qt/qtdeclarative/dev) 53005f4b544624f635b01ea7bef024d03453291a (qt/qtdeclarative/6.2) 97d08e35cccdfa69ffe9244699b4b1307058366d (qt/qtdeclarative/6.2.1)

      Changing width and height in ParentChange causes a crash.

      In the attached code, comment out the width/height bindings within ParentChange and uncomment PropertyChanges to get the desired result.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fabiankosmale Fabian Kosmale
            kahautam Kari Hautamäki
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes