ParentChange: handle bindable properties

QQuickParentChange::actions was unable to handle new style properties.
Fix this by using a QQmlAnyBinding create function instead of
QQmlBinding.

This required adding the necessary support for creation from a
QQmlScriptString to QQmlProperyBinding and QQmlAnyBinding.

Extra care had to be taken in reverseRewindHelper, which assumed that
setting x/y/width/height would keep binding intact. We therefore use
setValueBypassingBindings instead of the plain setter.

Fixes: QTBUG-97480
Pick-to: 6.2 6.2.1
Change-Id: I0cc6d61c655d9d37846adf4b09fe103f507bb329
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>