src/qml/qml/qqmlpropertybinding.cpp
@@ -42,6 +42,9 @@
 #include <private/qv4jscall_p.h>
 #include <qqmlinfo.h>
 #include <QtCore/qloggingcategory.h>
+#include <private/qqmlscriptstring_p.h>
+#include <private/qqmlbinding_p.h>
+#include <private/qv4qmlcontext_p.h>
 
 QT_BEGIN_NAMESPACE
 
@@ -88,6 +91,44 @@ QUntypedPropertyBinding QQmlPropertyBinding::createFromCodeString(const QQmlProp
     binding->jsExpression()->setNotifyOnValueChanged(true);
     binding->jsExpression()->setContext(ctxt);
     binding->jsExpression()->createQmlBinding(ctxt, obj, str, url, lineNumber);
+    return QUntypedPropertyBinding(static_cast<QPropertyBindingPrivate *>(QPropertyBindingPrivatePtr(binding).data()));
+}
+
+QUntypedPropertyBinding QQmlPropertyBinding::createFromScriptString(const QQmlPropertyData *property, const QQmlScriptString &script, QObject *obj, QQmlContext *ctxt, QObject *target, QQmlPropertyIndex targetIndex)
+{
+    const QQmlScriptStringPrivate *scriptPrivate = script.d.data();
+    // without a valid context, we cannot create anything
+    if (!ctxt && (!scriptPrivate->context || !scriptPrivate->context->isValid())) {
+        return {};
+    }
+
+    auto scopeObject = obj ? obj : scriptPrivate->scope;
+
+    QV4::Function *runtimeFunction = nullptr;
+    QString url;
+    QQmlRefPointer<QQmlContextData> ctxtdata = QQmlContextData::get(scriptPrivate->context);
+    QQmlEnginePrivate *engine = QQmlEnginePrivate::get(scriptPrivate->context->engine());
+    if (engine && ctxtdata && !ctxtdata->urlString().isEmpty() && ctxtdata->typeCompilationUnit()) {
+        url = ctxtdata->urlString();
+        if (scriptPrivate->bindingId != QQmlBinding::Invalid)
+            runtimeFunction = ctxtdata->typeCompilationUnit()->runtimeFunctions.at(scriptPrivate->bindingId);
+    }
+    // Do we actually have a function in the script string? If not, this becomes createCodeFromString
+    if (!runtimeFunction)
+        return createFromCodeString(property, scriptPrivate->script, obj, ctxtdata, url, scriptPrivate->lineNumber, target, targetIndex);
+
+    auto buffer = new std::byte[QQmlPropertyBinding::getSizeEnsuringAlignment()
+            + sizeof(QQmlPropertyBindingJS)+jsExpressionOffsetLength()]; // QQmlPropertyBinding uses delete[]
+    auto binding = new(buffer) QQmlPropertyBinding(QMetaType(property->propType()), target, targetIndex, TargetData::WithoutBoundFunction);
+    auto js = new(buffer + QQmlPropertyBinding::getSizeEnsuringAlignment() + jsExpressionOffsetLength()) QQmlPropertyBindingJS();
+    Q_ASSERT(binding->jsExpression() == js);
+    Q_ASSERT(js->asBinding() == binding);
+    js->setContext(QQmlContextData::get(ctxt ? ctxt : scriptPrivate->context));
+
+    QV4::ExecutionEngine *v4 = engine->v4engine();
+    QV4::Scope scope(v4);
+    QV4::Scoped<QV4::QmlContext> qmlContext(scope, QV4::QmlContext::create(v4->rootContext(), ctxtdata, scopeObject));
+    js->setupFunction(qmlContext, runtimeFunction);
     return QUntypedPropertyBinding(static_cast<QPropertyBindingPrivate *>(QPropertyBindingPrivatePtr(binding).data()));
 }
 
